[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/Scenes/Title.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Intro.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/FX/SelectSound.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/FX/AcceptSound.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/level_background.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Afterlight Logo.png" type="Texture" id=6]
[ext_resource path="res://Sprites/LIGHT.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Play.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Credits.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Exit.png" type="Texture" id=10]
[ext_resource path="res://Audio/Music/MainTheme.wav" type="AudioStream" id=11]
[ext_resource path="res://Fonts/PixelOperator.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Instances/SoundBurst.tscn" type="PackedScene" id=13]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
//render_mode unshaded;

uniform float cutoff : hint_range(0f, 1f);
uniform sampler2D transition : hint_albedo;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	float value = texture(transition, UV).r;
	COLOR = value > cutoff ? vec4(COLOR.rgb, 0) : col;
}"

[sub_resource type="OpenSimplexNoise" id=2]
period = 100.0
persistence = 1.0
lacunarity = 2.55

[sub_resource type="NoiseTexture" id=3]
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/cutoff = 0.0
shader_param/transition = SubResource( 3 )

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 3.5, 2.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Credits In"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsText:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 1, 0.419608, 1 ), Color( 0.952941, 1, 0.419608, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Play:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Credits:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Exit:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_credits"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Credits Out"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsText:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Logo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 1, 0.419608, 0 ), Color( 0.952941, 1, 0.419608, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Play:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Credits:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Exit:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_input"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "Exit"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 1, 0.419608, 1 ), Color( 0.952941, 1, 0.419608, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Play:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Credits:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Exit:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_game"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.6, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.513726 ), Color( 0, 0, 0, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Music:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -80.0 ]
}

[sub_resource type="Animation" id=9]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:material:shader_param/cutoff")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1.1487, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 2.0, 3.5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Flicker", -1, 1.0, false ],
"method": "play"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Play:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Credits:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Exit:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable_input"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Start Game"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.952941, 1, 0.419608, 1 ), Color( 0.952941, 1, 0.419608, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Play:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Credits:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Exit:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_game"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.6, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.513726 ), Color( 0, 0, 0, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Music:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -80.0 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 60, 39 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 91, 39 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 56, 39 )

[sub_resource type="DynamicFont" id=14]
size = 48
font_data = ExtResource( 12 )

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 480.0 ]
}
start_scene = ExtResource( 2 )
hover_sound = ExtResource( 3 )
click_sound = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.682353, 0.603922, 0.603922, 1 )
position = Vector2( 476, 299 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 1000 )
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 126, -10 )
texture = ExtResource( 6 )
centered = false

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 480, 112 )
texture = ExtResource( 7 )
texture_scale = 3.0
color = Color( 0.952941, 1, 0.419608, 1 )
energy = 0.01
shadow_enabled = true

[node name="Play" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 480, 313 )
texture = ExtResource( 8 )

[node name="Credits" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 480, 397 )
texture = ExtResource( 9 )

[node name="Exit" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 480, 481 )
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.513726 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/Flicker = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Fade in"
"anims/Credits In" = SubResource( 6 )
"anims/Credits Out" = SubResource( 7 )
anims/Exit = SubResource( 8 )
"anims/Fade in" = SubResource( 9 )
"anims/Start Game" = SubResource( 10 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -24.0
autoplay = true

[node name="Area1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area1"]
position = Vector2( 480, 309 )
shape = SubResource( 11 )

[node name="Area2" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2"]
position = Vector2( 480, 397 )
shape = SubResource( 12 )

[node name="Area3" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area3"]
position = Vector2( 480, 481 )
shape = SubResource( 13 )

[node name="CreditsText" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 95.0
margin_top = 108.0
margin_right = 866.0
margin_bottom = 411.0
custom_fonts/font = SubResource( 14 )
text = "Rami Shreim - Design, Art
Riley Park - Writing, Design
Duncan Sparks - Programming, Writing
Johan Tan - Programming, Audio
Lyndon de la Torre - Programming, Design
Hunter Abaravich - Art"
align = 1

[node name="SoundBurst" parent="." instance=ExtResource( 13 )]
[connection signal="mouse_entered" from="Area1" to="." method="_on_Area1_mouse_entered"]
[connection signal="mouse_exited" from="Area1" to="." method="_on_Area1_mouse_exited"]
[connection signal="mouse_entered" from="Area2" to="." method="_on_Area2_mouse_entered"]
[connection signal="mouse_exited" from="Area2" to="." method="_on_Area1_mouse_exited"]
[connection signal="mouse_entered" from="Area3" to="." method="_on_Area3_mouse_entered"]
[connection signal="mouse_exited" from="Area3" to="." method="_on_Area1_mouse_exited"]
